[metadata]
name = supDolphinWS-server
version = 0.1.3
author = sup39
author_email = sms@sup39.dev
description = A WebSocket server for accessing memory of emulated games in Dolphin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sup39/supDolphinWS-server
license = MIT
project_urls =
  Bug Tracker = https://github.com/sup39/supDolphinWS-server/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: Microsoft :: Windows

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
  wsocket >= 2.1.0
  psutil >= 5.9.4

[options.packages.find]
where = src
